--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,18 @@
     <artifactId>heine-fluch</artifactId>
     <version>0.1</version>
     <url>https://github.com/SmausJakub/heine-fluch.git</url>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <antlr.version>4.7</antlr.version>
