--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,6 @@ hs_err_pid*
 .idea/
 *.iml
 *.iws
-*.docx
 
 # Compiled source #
 ###################
@@ -50,3 +49,12 @@ hs_err_pid*
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Custom #
+######################
+*.doc
+*.docx
+*.txt
+*.aux
+*.out
+*.toc
