--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <antlr.version>4.7</antlr.version>
         <junit.version>4.12</junit.version>
         <systemrules.version>1.16.0</systemrules.version>
+        <mockito.version>1.10.19</mockito.version>
+        <powermock.version>1.7.3</powermock.version>
     </properties>
 
 
@@ -47,6 +49,28 @@
             <version>${systemrules.version}</version>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
